--- a/src/components/TagSelect/tagselect.module.css
+++ b/src/components/TagSelect/tagselect.module.css
@@ -1,8 +1,13 @@
 .container {
     display: flex;
+    flex-direction: column;
+}
+.inputContainer {
+    display: flex;
+    /* width: 100%; */
 }
 .input {
-    width: 170px;
+    width: 100%;
     height: 69px;
     border-radius: 5px 0 0 5px;
     padding: 1rem;
@@ -17,6 +22,15 @@
     opacity: 1;
 }
 
+.tagsList {
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: repeat(3, max-content);
+    gap: 0.5rem;
+    margin-top: -0.2rem;
+    border-radius: 0 0 5px 5px;
+}
+
 .blue {
     background-color: var(--primary-button);
 }
@@ -25,4 +39,12 @@
 }
 .red {
     background-color: var(--tertiary-button);
+}
+
+.showList {
+    display: grid;
+}
+
+.hideList {
+    display: none;
 }
