--- a/src/components/TagSelect/tagselect.module.css
+++ b/src/components/TagSelect/tagselect.module.css
@@ -25,7 +25,7 @@
 .tagsList {
     padding: 1rem;
     display: grid;
-    grid-template-columns: repeat(2, max-content);
+    grid-template-columns: repeat(2, 1fr);
     gap: 0.5rem;
     margin-top: -0.2rem;
     border-radius: 0 0 5px 5px;
