change name of tag component into SelectTagItem

--- a/src/components/TagSelectItem/selectTagItem.module.css
+++ b/src/components/TagSelectItem/selectTagItem.module.css
@@ -1,9 +1,9 @@
-.tag {
+.selectTagItem {
     color: white;
     cursor: pointer;
     font-size: 18px;
 }
 
-.tag:hover {
+.selectTagItem:hover {
     text-decoration: underline;
 }
